--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=ffca7f0f03cf05c48292e724561c21dd
 DATABASE_URL="mysql://root:@127.0.0.1:3306/todoapp"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://127.0.0.1
+###< symfony/mailer ###
