--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/todoapp"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://98e0a55b3510b3:1d94a64d501236@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
