--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=ffca7f0f03cf05c48292e724561c21dd
 ###< symfony/framework-bundle ###
 
@@ -23,7 +23,7 @@ APP_SECRET=ffca7f0f03cf05c48292e724561c21dd
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/todoapp"
+DATABASE_URL="mysql://dwwm102:afpa@127.0.0.1:3306/dwwm102"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
