--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">7.2.5",
+        "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
@@ -69,7 +69,7 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "compile":[
+        "compile": [
             "php bin/console doctrine:migrations:migrate"
         ]
     },
